--- a/package.json
+++ b/package.json
@@ -2,22 +2,21 @@
   "name": "@travelperksl/case-converter",
   "description": "transform object to use different case conventions",
   "main": "./dist/index.js",
-  "files": ["dist", "README.md"],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "cm": "git-cz",
     "precommit": "lint-staged && npm run cover",
-    "check-coverage":
-      "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
-    "report-coverage":
-      "cat ./coverage/lcov.info | codecov token=$CODECOV_TOKEN",
+    "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
+    "report-coverage": "cat ./coverage/lcov.info | codecov token=$CODECOV_TOKEN",
     "build": "webpack",
     "prebuild": "rm -rf dist",
     "test": "jest",
     "cover": "npm test -- --coverage",
-    "semantic-release":
-      "semantic-release pre && npm publish && semantic-release post",
-    "update-contrib":
-      "weallcontribute -o . && git add CONTRIBUTING.md && git commit -m 'docs(contributing): updated CONTRIBUTING.md'"
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "update-contrib": "weallcontribute -o . && git add CONTRIBUTING.md && git commit -m 'docs(contributing): updated CONTRIBUTING.md'"
   },
   "repository": {
     "type": "git",
@@ -40,7 +39,9 @@
   },
   "homepage": "https://github.com/travelperk/case-converter/#readme",
   "tonicExampleFilename": "example.js",
-  "engines": { "node": "8.7.0" },
+  "engines": {
+    "node": "8.7.0"
+  },
   "devDependencies": {
     "babel-loader": "6.2.4",
     "babel-plugin-__coverage__": "11.0.0",
@@ -67,10 +68,16 @@
     "lodash.upperfirst": "^4.3.1"
   },
   "babel": {
-    "presets": ["es2015", "react"]
+    "presets": [
+      "es2015",
+      "react"
+    ]
   },
   "standard": {
-    "globals": ["describe", "it"]
+    "globals": [
+      "describe",
+      "it"
+    ]
   },
   "config": {
     "commitizen": {
@@ -78,7 +85,10 @@
     }
   },
   "lint-staged": {
-    "*.{js,json}": ["prettier --write", "git add"]
+    "*.{js,json}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "jest": {
     "coverageThreshold": {
